fix: Sidebar scrollbar bg color chnages and width

--- a/src/index.css
+++ b/src/index.css
@@ -25,15 +25,25 @@ a {
   text-decoration: none;
 }
 
-:where(.css-dev-only-do-not-override-1gwfwyx).ant-menu-light.ant-menu-horizontal >.ant-menu-item, :where(.css-dev-only-do-not-override-1gwfwyx).ant-menu-light>.ant-menu.ant-menu-horizontal >.ant-menu-item, :where(.css-dev-only-do-not-override-1gwfwyx).ant-menu-light.ant-menu-horizontal >.ant-menu-submenu, :where(.css-dev-only-do-not-override-1gwfwyx).ant-menu-light>.ant-menu.ant-menu-horizontal >.ant-menu-submenu {
-
-  padding: .5rem;
+:where(.css-dev-only-do-not-override-1gwfwyx).ant-menu-light.ant-menu-horizontal
+  > .ant-menu-item,
+:where(.css-dev-only-do-not-override-1gwfwyx).ant-menu-light
+  > .ant-menu.ant-menu-horizontal
+  > .ant-menu-item,
+:where(.css-dev-only-do-not-override-1gwfwyx).ant-menu-light.ant-menu-horizontal
+  > .ant-menu-submenu,
+:where(.css-dev-only-do-not-override-1gwfwyx).ant-menu-light
+  > .ant-menu.ant-menu-horizontal
+  > .ant-menu-submenu {
+  padding: 0.5rem;
   border-radius: 30px;
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
+
+/* sidebar scrollbar */
 .sider-custom-scrollbar::-webkit-scrollbar {
-  width: 7px;
+  width: 5px;
 }
 
 .sider-custom-scrollbar::-webkit-scrollbar-track {
@@ -42,48 +52,33 @@ a {
 }
 
 .sider-custom-scrollbar::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 10px; 
-}
-
-.sider-custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #555; 
-}
-
-.horizontal-scrollbar::-webkit-scrollbar {
-  height: 7px; 
-}
-
-.horizontal-scrollbar::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background-color: #072635;
   border-radius: 10px;
 }
 
-.horizontal-scrollbar::-webkit-scrollbar-thumb {
-  background: #888; 
-  border-radius: 10px; 
+.sider-custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #072635;
 }
-
-.horizontal-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
 
 /* Customize scrollbar styles for Diagnostic List */
-.scrollbar-custom {
-  scrollbar-width: thin;
-  scrollbar-color: #0f2530 #edf2f7;
-}
-
 .scrollbar-custom::-webkit-scrollbar {
-  width: 4px;
+  height: 0.5rem;
+  width: 6px;
 }
 
 .scrollbar-custom::-webkit-scrollbar-track {
-  background: #edf2f7; 
+  background: #edf2f7;
 }
 
 .scrollbar-custom::-webkit-scrollbar-thumb {
-  background-color: #072635; 
-  border-radius: 9999px; 
+  background-color: #072635;
+  border-radius: 9999px;
+  -webkit-border-radius: 9999px;
+  -moz-border-radius: 9999px;
+  -ms-border-radius: 9999px;
+  -o-border-radius: 9999px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
